<resources>
    <string name="app_name">GameSmart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GameSmart</string>
    <string name="nav_header_subtitle">Education Gamified</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_games">Games</string>
    <string name="menu_info">Info</string>
    <string name="menu_account">Account</string>
    <string name="menu_shop">Shop</string>
    <string name="button_email">button email</string>
    <string name="text_label_btmnav_account">Account</string>
    <string name="text_label_btmnav_info">Info</string>
    <string name="text_label_btmnav_shop">Shop</string>
    <string name="text_label_btmnav_games">Games</string>
    <string name="delete_card_home_cta_title">Check Out Our Store</string>
    <string name="card_home_cta_desc">Learn while playing, Earn points for buying useful items and streams!</string>
    <string name="card_home_cta_heading">Check Out Our Store</string>
    <string name="section_label_home">Home</string>
    <string name="text_label_btmnav_home">Home</string>
    <string name="go_to_store">Go To Store</string>

    <!-- Strings for Cart fragments -->
    <string name="title_activity_cart">GameStore</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="rubik_s_cube_puzzle">Rubik\'s Cube Puzzle</string>
    <string name="product_image">Product Image</string>
    <string name="desc_rubik">These classic 3x3 puzzle cubes have surged in popularity since the Netflix documentary.</string>
    <string name="search">Search</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_test2">TestActivity</string>
</resources>