<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_games"
        android:enabled="true"
        android:icon="@drawable/ic_action_games"
        android:title="@string/text_label_btmnav_games"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/nav_shop"
        android:enabled="true"
        android:icon="@drawable/ic_action_cart"
        android:title="@string/text_label_btmnav_shop"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/nav_info"
        android:enabled="true"
        android:icon="@drawable/ic_action_info"
        android:title="@string/text_label_btmnav_info"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/nav_account"
        android:enabled="true"
        android:icon="@drawable/ic_action_account"
        android:title="@string/text_label_btmnav_account"
        android:menuCategory="secondary"/>
</menu>