<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.krisbunda.gamesmart.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
<!--        <action
            android:id="@+id/action_activity_main_to_activity_cart"
            app:destination="@layout/activity_cart" />-->
    </fragment>

    <fragment
        android:id="@+id/nav_games"
        android:name="com.krisbunda.gamesmart.ui.games.GamesFragment"
        android:label="@string/menu_games"
        tools:layout="@layout/fragment_games" />

    <fragment
        android:id="@+id/navcat_home"
        android:name="com.krisbunda.gamesmart.ui.shop.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/activity_cart">
<!--        <action
            android:id="@+id/action_activity_cart_to_activity_main"
            app:destination="@layout/activity_main" />-->
    </fragment>

    <fragment
        android:id="@+id/nav_info"
        android:name="com.krisbunda.gamesmart.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.krisbunda.gamesmart.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

<!--
    <include app:graph="@navigation/nav_graph_cart" />
-->

</navigation>


<!--
<fragment
android:id="@+id/nav_gallery"
android:name="com.krisbunda.gamesmart.ui.gallery.GalleryFragment"
android:label="@string/menu_gallery"
tools:layout="@layout/fragment_gallery" />

<fragment
android:id="@+id/nav_slideshow"
android:name="com.krisbunda.gamesmart.ui.slideshow.SlideshowFragment"
android:label="@string/menu_slideshow"
tools:layout="@layout/fragment_slideshow" />
-->
